env files and ranking